--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,10 +30,10 @@ jobs:
     - run: flutter pub get
     
     # Build apk.
-    - run: flutter build apk
+    - run: flutter build apk --split-per-abi
     
     # Upload generated apk to the artifacts.
     - uses: actions/upload-artifact@v3
       with:
-        name: release-apk
-        path: build/app/outputs/apk/release/app-release.apk
+        name: app-arm64-v8a-release
+        path: /build/app/outputs/apk/release/app-arm64-v8a-release.apk
