--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,5 +35,5 @@ jobs:
     # Upload generated apk to the artifacts.
     - uses: actions/upload-artifact@v3
       with:
-        name: app-arm64-v8a-release
-        path: /build/app/outputs/apk/release/app-arm64-v8a-release.apk
+        name: release-apk
+        path: build/app/outputs/apk/release/app-release.apk
