--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^2.0.15
   loading_animation_widget: ^1.2.0+3
   carousel_slider: ^4.1.1
+  flutter_material_color_picker: ^1.1.0+2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
